.provarCaches/00D6C0000000xA6UAI/objects/sked__Shift__c.object
<CustomObject>
    <fields>
        <fullName>sked__Copied_From_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Copied From Id</label>
        <referenceTo>sked__Shift__c</referenceTo>
        <relationshipLabel>Shifts</relationshipLabel>
        <relationshipName>Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Display_Name__c</fullName>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Duration__c</fullName>
        <inlineHelpText>Shift duration in minutes</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__End1__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__End__c</fullName>
        <formula>sked__Start__c  + sked__Duration__c  / 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Is_Draft__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Shifts</relationshipLabel>
        <relationshipName>Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Shifts</relationshipLabel>
        <relationshipName>Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Schedule_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Template</label>
        <referenceTo>sked__Schedule_Template__c</referenceTo>
        <relationshipLabel>Shifts</relationshipLabel>
        <relationshipName>Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Templated_Shift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Templated Shift</label>
        <referenceTo>sked__Templated_Shift__c</referenceTo>
        <relationshipLabel>Shifts</relationshipLabel>
        <relationshipName>Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shift</label>
    <listViews>
        <fullName>sked__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SHFT-{0000}</displayFormat>
        <label>Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sked__DurationMustBeGreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Duration__c  &lt; 1</errorConditionFormula>
        <errorDisplayField>sked__Duration__c</errorDisplayField>
        <errorMessage>Shift duration must be greater than 0 minute</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__DurationMustMatchStartToEnd</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNULL( sked__End1__c ) ) , NOT( ISNULL( sked__Start__c ) ), sked__Duration__c  &lt;&gt;  ROUND( (sked__End1__c  -  sked__Start__c) * 1440 ,0)  )</errorConditionFormula>
        <errorMessage>Duration must match Start to End</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__StartEndDurationAreRequired</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL( sked__Start__c ) , ISNULL( sked__End1__c ) , ISNULL( sked__Duration__c ) )</errorConditionFormula>
        <errorMessage>Start, End and Duration are required</errorMessage>
    </validationRules>
</CustomObject>